--- a/lib/core/language/l10n/app_ar.arb
+++ b/lib/core/language/l10n/app_ar.arb
@@ -3,7 +3,7 @@
   "add_new_caregiver": "إضافة مقدم رعاية جديد",
   "personal_information": "المعلومات الشخصية",
   "work_history": "تاريخ العمل",
-  "education_certifications": "التعليم والشهادات",
+  "education_certifications": "التعليم والشهادات والتدريب",
   "references_testimonials": "المراجع والشهادات",
   "skills_competencies": "المهارات والكفاءات",
   "documents_memberships": "الوثائق والعضويات",
@@ -19,16 +19,25 @@
   "please_fill_all_steps": "يرجى ملء جميع الحقول المطلوبة بشكل صحيح في جميع الخطوات.",
   "add_more": "إضافة المزيد",
   "education": "التعليم",
+  "certifications": "الشهادات",
   "certification": "الشهادة",
+  "trainings": "التدريبات",
+  "training": "التدريب",
   "please_enter_degree": "يرجى إدخال الدرجة/الشهادة",
   "please_enter_institution": "يرجى إدخال اسم المؤسسة",
-  "please_enter_year": "يرجى إدخال السنة",
+  "please_enter_year": "يرجى إدخال تاريخ الإتمام",
   "please_enter_certification_name": "يرجى إدخال اسم الشهادة",
-  "please_enter_full_name": "يرجى إدخال الاسم الكامل",
+  "please_enter_training_name": "يرجى إدخال اسم التدريب",
+  "please_enter_first_name": "يرجى إدخال الاسم الأول",
+  "please_enter_last_name": "يرجى إدخال الاسم الأخير",
   "please_enter_phone_number": "يرجى إدخال رقم الهاتف",
   "please_enter_email_address": "يرجى إدخال عنوان البريد الإلكتروني",
   "please_enter_valid_email": "يرجى إدخال بريد إلكتروني صالح",
+  "please_enter_city": "يرجى إدخال المدينة",
+  "please_enter_country": "يرجى إدخال الدولة",
+  "address": "العنوان",
   "please_enter_address": "يرجى إدخال العنوان",
+  "please_enter_address_details": "يرجى إدخال تفاصيل العنوان",
   "please_enter_professional_summary": "يرجى إدخال الملخص المهني",
   "please_enter_reference_name": "يرجى إدخال اسم المرجع",
   "please_enter_relationship": "يرجى إدخال العلاقة",
@@ -37,6 +46,8 @@
   "upload_documents": "رفع الوثائق",
   "upload_care_plans": "رفع خطط الرعاية/التقارير",
   "upload_activity_photos": "رفع صور الأنشطة",
+  "upload_image": "رفع صورة",
+  "image_url": "رابط الصورة",
   "work_experience": "الخبرة العملية",
   "please_enter_job_title": "يرجى إدخال المسمى الوظيفي",
   "please_enter_employer_name": "يرجى إدخال اسم صاحب العمل",
@@ -54,24 +65,29 @@
   "language_proficiency": "إتقان اللغة",
   "work_samples_optional": "عينات العمل (اختياري)",
   "upload_recommendation_letters_optional": "رفع خطابات التوصية (اختياري)",
-  "full_name": "الاسم الكامل",
+  "first_name": "الاسم الأول",
+  "last_name": "الاسم الأخير",
   "phone_number": "رقم الهاتف",
   "email_address": "عنوان البريد الإلكتروني",
-  "address": "العنوان",
+  "city": "المدينة",
+  "country": "الدولة",
+  "address_details": "تفاصيل العنوان",
   "professional_summary": "الملخص المهني",
   "professional_summary_hint": "مقدمة مختصرة تبرز الخبرة والمهارات والأهداف",
   "job_title": "المسمى الوظيفي",
   "employer_name": "اسم صاحب العمل",
-  "start_year": "سنة البداية",
-  "end_year_or_present": "سنة النهاية (أو الحالي)",
+  "start_date": "تاريخ البداية",
+  "end_date_or_present": "تاريخ النهاية (أو الحالي)",
   "key_responsibilities": "المسؤوليات الرئيسية",
   "key_responsibilities_hint": "سرد الواجبات والخبرات الرئيسية",
   "degree_certification": "الدرجة/الشهادة",
   "institution_name": "اسم المؤسسة",
-  "year": "السنة",
-  "certifications_training": "الشهادات والتدريب",
+  "year": "تاريخ الإتمام",
+  "completion_date": "تاريخ الإتمام",
   "certification_name": "اسم الشهادة",
   "certification_name_hint": "مثلاً، الإسعافات الأولية والإنعاش القلبي، رعاية الخرف، إلخ.",
+  "training_name": "اسم التدريب",
+  "training_name_hint": "مثلاً، تدريب رعاية المسنين، تدريب الإسعافات الأولية، إلخ.",
   "issuing_organization": "المنظمة المصدرة",
   "issue_date": "تاريخ الإصدار",
   "expiry_date_if_any": "تاريخ الانتهاء (إن وجد)",
@@ -84,11 +100,25 @@
   "testimonial_recommendation_if_available": "شهادة/توصية (إن وجدت)",
   "testimonial_hint": "تعليق مختصر أو شهادة من هذا المرجع",
   "languages_separated_by_commas": "اللغات (مفصولة بفواصل)",
-  "languages_hint": "مثلاً، الإنجليزية (أصلية)، الإسبانية (بطلاقة)، الفرنسية (أساسية)",
+  "languages_hint": "مثلاً، العربية (أصلية)، الإنجليزية (طلاقة)، الفرنسية (أساسية)",
   "professional_memberships_hint": "مثلاً، الجمعية الوطنية لمقدمي الرعاية، إلخ.",
   "awards_achievements_hint": "سرد أي تقديرات أو إنجازات في مجال الرعاية",
   "switch_to_arabic": "التبديل إلى العربية",
   "switch_to_english": "التبديل إلى الإنجليزية",
   "switch_to_dark_mode": "التبديل إلى الوضع الداكن",
-  "switch_to_light_mode": "التبديل إلى الوضع الفاتح"
+  "switch_to_light_mode": "التبديل إلى الوضع الفاتح",
+  "birthdate": "تاريخ الميلاد",
+  "please_select_birthdate": "يرجى اختيار تاريخ الميلاد",
+  "age": "العمر",
+  "gender": "الجنس",
+  "please_select_gender": "يرجى اختيار الجنس",
+  "marital_status": "الحالة الاجتماعية",
+  "please_select_marital_status": "يرجى اختيار الحالة الاجتماعية",
+  "male": "ذكر",
+  "female": "أنثى",
+  "other": "آخر",
+  "single": "أعزب",
+  "married": "متزوج",
+  "divorced": "مطلق",
+  "widowed": "أرمل"
 }
