--- a/lib/core/language/l10n/app_en.arb
+++ b/lib/core/language/l10n/app_en.arb
@@ -3,7 +3,7 @@
   "add_new_caregiver": "Add New Caregiver",
   "personal_information": "Personal Information",
   "work_history": "Work History",
-  "education_certifications": "Education & Certifications",
+  "education_certifications": "Education, Certifications & Training",
   "references_testimonials": "References & Testimonials",
   "skills_competencies": "Skills & Competencies",
   "documents_memberships": "Documents & Memberships",
@@ -19,16 +19,25 @@
   "please_fill_all_steps": "Please fill all required fields correctly in all steps.",
   "add_more": "Add More",
   "education": "Education",
+  "certifications": "Certifications",
   "certification": "Certification",
+  "trainings": "Trainings",
+  "training": "Training",
   "please_enter_degree": "Please enter degree/certification",
   "please_enter_institution": "Please enter institution name",
-  "please_enter_year": "Please enter year",
+  "please_enter_year": "Please enter completion date",
   "please_enter_certification_name": "Please enter certification name",
-  "please_enter_full_name": "Please enter full name",
+  "please_enter_training_name": "Please enter training name",
+  "please_enter_first_name": "Please enter first name",
+  "please_enter_last_name": "Please enter last name",
   "please_enter_phone_number": "Please enter phone number",
   "please_enter_email_address": "Please enter email address",
   "please_enter_valid_email": "Please enter a valid email",
+  "please_enter_city": "Please enter city",
+  "please_enter_country": "Please enter country",
+  "address": "Address",
   "please_enter_address": "Please enter address",
+  "please_enter_address_details": "Please enter address details",
   "please_enter_professional_summary": "Please enter professional summary",
   "please_enter_reference_name": "Please enter reference name",
   "please_enter_relationship": "Please enter relationship",
@@ -37,6 +46,8 @@
   "upload_documents": "Upload Documents",
   "upload_care_plans": "Upload Care Plans/Reports",
   "upload_activity_photos": "Upload Activity Photos",
+  "upload_image": "Upload Image",
+  "image_url": "Image URL",
   "work_experience": "Work Experience",
   "please_enter_job_title": "Please enter job title",
   "please_enter_employer_name": "Please enter employer name",
@@ -54,24 +65,29 @@
   "language_proficiency": "Language Proficiency",
   "work_samples_optional": "Work Samples (Optional)",
   "upload_recommendation_letters_optional": "Upload Recommendation Letters (Optional)",
-  "full_name": "Full Name",
+  "first_name": "First Name",
+  "last_name": "Last Name",
   "phone_number": "Phone Number",
   "email_address": "Email Address",
-  "address": "Address",
+  "city": "City",
+  "country": "Country",
+  "address_details": "Address Details",
   "professional_summary": "Professional Summary",
   "professional_summary_hint": "Brief introduction highlighting experience, skills, and goals",
   "job_title": "Job Title",
   "employer_name": "Employer Name",
-  "start_year": "Start Year",
-  "end_year_or_present": "End Year (or Present)",
+  "start_date": "Start Date",
+  "end_date_or_present": "End Date (or Present)",
   "key_responsibilities": "Key Responsibilities",
   "key_responsibilities_hint": "List key duties and experiences",
   "degree_certification": "Degree/Certification",
   "institution_name": "Institution Name",
-  "year": "Year",
-  "certifications_training": "Certifications & Training",
+  "year": "Completion Date",
+  "completion_date": "Completion Date",
   "certification_name": "Certification Name",
   "certification_name_hint": "e.g., CPR & First Aid, Dementia Care, etc.",
+  "training_name": "Training Name",
+  "training_name_hint": "e.g., Elderly Care Training, First Aid Training, etc.",
   "issuing_organization": "Issuing Organization",
   "issue_date": "Issue Date",
   "expiry_date_if_any": "Expiry Date (if any)",
@@ -90,5 +106,19 @@
   "switch_to_arabic": "Switch to Arabic",
   "switch_to_english": "Switch to English",
   "switch_to_dark_mode": "Switch to Dark Mode",
-  "switch_to_light_mode": "Switch to Light Mode"
+  "switch_to_light_mode": "Switch to Light Mode",
+  "birthdate": "Birthdate",
+  "please_select_birthdate": "Please select a birthdate",
+  "age": "Age",
+  "gender": "Gender",
+  "please_select_gender": "Please select a gender",
+  "marital_status": "Marital Status",
+  "please_select_marital_status": "Please select marital status",
+  "male": "Male",
+  "female": "Female",
+  "other": "Other",
+  "single": "Single",
+  "married": "Married",
+  "divorced": "Divorced",
+  "widowed": "Widowed"
 }
